--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
 @use './reset.scss';
 @use './variables/global.scss';
 @use './themes/dark.scss';
-@use './themes/normal.scss';
+@use './themes/light.scss';
 
 .app {
     font: var(--font-m);
