--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,9 @@
 .app.dark {
-    --bg-color:#0a0a41;
+  --bg-color: #0a0a41;
+  --inverted-bg-color: #e8e8ea;
 
-    --primary-color:#5fc45f;
-    --secondary-color:#ec936a;
+  --primary-color: #5fc45f;
+  --secondary-color: #ec936a;
+  --inverted-primary-color: #363e85;
+  --inverted-secondary-color: #3a87c7;
 }
