--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -3,6 +3,6 @@
   --inverted-bg-color: #e8e8ea;
   --primary-color: #5fc45f;
   --secondary-color: #ec936a;
-  --inverted-primary-color: #363e85;
-  --inverted-secondary-color: #3a87c7;
+  --inverted-primary-color: #53e8f3;
+  --inverted-secondary-color: #4fa5eb;
 }
