--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,13 +1,21 @@
 .Button {
    cursor: pointer;
+   padding: 10px;
 }
 
 
 .clear {
-    padding: 0;
+    padding: 10px;
     margin: 0;
     border: none;
     background: none;
     outline: none;
 
+}
+
+.outline {
+    padding: 10px;
+    border: 1px solid var(--primary-color);
+    color:var(--primary-color);
+    background: none;
 }
