--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
-@import "./reset.scss";
-@import "./variables/global.scss";
-@import "./themes/dark.scss";
-@import "./themes/light.scss";
+@import url("./reset.scss");
+@import url("./variables/global.scss");
+@import url("./themes/dark.scss");
+@import url("./themes/light.scss");
 
 .app {
   font: var(--font-m);
