upgrade sidebar, button

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,7 +1,7 @@
 .app.light {
   --bg-color: #e8e8ea;
   --inverted-bg-color: #0a0a41;
-  --primary-color: #363e85;
+  --primary-color: #b61565;
   --secondary-color: #3a87c7;
   --inverted-primary-color: #5fc45f;
   --inverted-secondary-color: #ec936a;
