--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,21 +1,64 @@
-.Button {
-   cursor: pointer;
-   padding: 10px;
+.button {
+  cursor: pointer;
+  padding: 8px 15px;
 }
 
-
 .clear {
-    padding: 10px;
-    margin: 0;
-    border: none;
-    background: none;
-    outline: none;
-
+  padding: 10px;
+  margin: 0;
+  border: none;
+  background: none;
+  outline: none;
 }
 
 .outline {
-    padding: 10px;
-    border: 1px solid var(--primary-color);
-    color:var(--primary-color);
-    background: none;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  background: none;
 }
+
+.background {
+  background: var(--bg-color);
+  color: var(--primary-color);
+  border: none;
+}
+
+.backgroundInverted {
+  background: var(--inverted-bg-color);
+  color: var(--inverted-primary-color);
+  border: none;
+}
+
+.square {
+  padding: 0;
+
+  &.size_m {
+    height: var(--font-line-m);
+    width: var(--font-line-m);
+    font: var(--font-m);
+  }
+
+  &.size_l {
+    height: var(--font-line-l);
+    width: var(--font-line-l);
+    font: var(--font-l);
+  }
+
+  &.size_xl {
+    height: var(--font-line-xl);
+    width: var(--font-line-xl);
+    font: var(--font-xl);
+  }
+}
+
+.size_m {
+    font: var(--font-m);
+  }
+
+  .size_l {
+    font: var(--font-l);
+  }
+
+.size_xl {
+    font: var(--font-xl);
+  }
