--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -10,6 +10,8 @@
   --font-line-xl: 40px;
   --font-xl: var(--font-size-l) / var(--font-line-xl) var(--font-family-main);
   --navbar-height: 50px;
-  --sidebar-width:300px;
-  --sidebar-width-collapsed:80px;
+  --sidebar-width: 300px;
+  --sidebar-width-collapsed: 80px;
+  --modal-z-index: 10;
+  --overlay-color: rgb(0 0 0 / 60%);
 }
