add login feature

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -13,5 +13,8 @@
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
   --modal-z-index: 10;
+/*  COLORS */
   --overlay-color: rgb(0 0 0 / 60%);
+  --red-light:red;
+  --red-dark:rgb(143, 4, 4);
 }
