add article entity, skeleton ui, icon ui

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,7 @@
   --secondary-color: #ec936a;
   --inverted-primary-color: #53e8f3;
   --inverted-secondary-color: #4fa5eb;
+  --skeleton-color: #e8e8ea;
+  --skeleton-shadow: #0a0a41;
+  --code-bg: #e4e4e4;
 }
