--- a/src/app/styles/themes/orange.scss
+++ b/src/app/styles/themes/orange.scss
@@ -1,8 +1,11 @@
 .app_orange_theme {
-  --bg-color: #F5F4FB;
+  --bg-color: #f5f4fb;
   --inverted-bg-color: #a098d1;
-  --primary-color: #F5F4FB;
-  --secondary-color: #7D9DC5;
-  --inverted-primary-color: #7D9DC5;
-  --inverted-secondary-color: #7D9DC5;
+  --primary-color: #f5f4fb;
+  --secondary-color: #7d9dc5;
+  --inverted-primary-color: #7d9dc5;
+  --inverted-secondary-color: #7d9dc5;
+  --skeleton-color: #a098d1;
+  --skeleton-shadow: #f5f4fb;
+  --code-bg: #7d9dc5;
 }
