--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -5,4 +5,7 @@
   --secondary-color: #3a87c7;
   --inverted-primary-color: #5fc45f;
   --inverted-secondary-color: #ec936a;
+  --skeleton-color: #0a0a41;
+  --skeleton-shadow: #e8e8ea;
+  --code-bg: #ffffff;
 }
