add fetching articles, viewtype selector

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
 @import url("./reset.scss");
 @import url("./variables/global.scss");
 @import url("./themes/dark.scss");
-@import url("./themes/orange.scss");
+@import url("./themes/alter.scss");
 @import url("./themes/light.scss");
 
 .app {
