--- a/src/app/styles/themes/alter.scss
+++ b/src/app/styles/themes/alter.scss
@@ -1,11 +1,12 @@
-.app_orange_theme {
+.app_alter_theme {
   --bg-color: #f5f4fb;
   --inverted-bg-color: #a098d1;
-  --primary-color: #f5f4fb;
-  --secondary-color: #7d9dc5;
+  --primary-color: #504c69;
+  --secondary-color: #575757;
   --inverted-primary-color: #7d9dc5;
   --inverted-secondary-color: #7d9dc5;
   --skeleton-color: #a098d1;
   --skeleton-shadow: #f5f4fb;
   --code-bg: #7d9dc5;
+  --card-bg:#7d9dc5;
 }
