--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
@@ -2,6 +2,13 @@
     min-height: 100%;
 }
 
-.commentTitle {
+.title {
     margin-top: 20px;
+}
+
+.recommendations {
+    margin-top: 20px;
+    flex-wrap:  nowrap;
+    overflow-y: hidden;
+    overflow-x: auto;
 }
