--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -28,9 +28,7 @@
 
 .items {
   margin-top: 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-left: 15px;
 }
 
 .collapsed {
