--- a/src/shared/ui/Dropdown/Dropdown.module.scss
+++ b/src/shared/ui/Dropdown/Dropdown.module.scss
@@ -1,34 +1,34 @@
-.listbox {
+.dropdown {
   position: relative;
 }
-.triggerBtn {
-  background: none;
-  border: none;
-  outline: none;
+
+.btn {
   padding: 0;
   margin: 0;
+  background: none;
+  outline: none;
+  bottom: none;
+  cursor: pointer;
 }
 
-.options {
-  min-width: 100%;
-  padding-top: 5px;
-  background: var(--listbox-bg);
+.items {
+  background: var(--card-bg);
   position: absolute;
   z-index: 500;
   border-radius: 10px;
-  box-shadow: 4px 4 px 8px var(--listbox-bg);
+  border: 1px solid var(--primary-color);
+  cursor: pointer;
 }
 
 .item {
-  padding: 10px 20px;
+  padding: 10px 25px;
+  width: 100%;
+  background: none;
+  outline: none;
 }
 
 .active {
-  background-color: var(--inverted-primary-color);
-}
-
-.disabled {
-  opacity: 0.7;
+    background: var(--inverted-primary-color);
 }
 
 .optionsTopLeft {
@@ -47,3 +47,4 @@
   top: 100%;
   left: 0;
 }
+
