--- a/src/entities/Comment/ui/CommentCard/CommentCard.module.scss
+++ b/src/entities/Comment/ui/CommentCard/CommentCard.module.scss
@@ -1,18 +1,17 @@
-.CommentCard {
-    padding: 10px;
-    border: 1px solid var(--primary-color)
+.commentCard {
+  padding: 10px;
+  border: 1px solid var(--primary-color);
 }
 
 .header {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-
 .username {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .loading {
-    border: none;
+  border: none;
 }
