--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -12,6 +12,10 @@
   margin-right: 15px;
 }
 
+.actions {
+  margin-left: auto;
+}
+
 .logo {
   width: var(--sidebar-width);
   margin-left: 15px;
@@ -20,3 +24,5 @@
 .createBtn {
   margin-left: 15px;
 }
+
+
