add drawer, add detect device

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,9 +4,11 @@
 @import url("./themes/alter.scss");
 @import url("./themes/light.scss");
 
-.app {
+.app,
+.app_drawer,
+.app_modal {
   font: var(--font-m);
-  background: var(--bg-color);
+  //background: var(--bg-color);
   color: var(--primary-color);
   min-height: 100vh;
 }
