--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -12,12 +12,14 @@
   --font-size-xl: 32px;
   --font-line-xl: 40px;
   --font-xl: var(--font-size-l) / var(--font-line-xl) var(--font-family-main);
+/* navbar */
   --navbar-height: 50px;
+/*   //sidebar// */
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
   --modal-z-index: 10;
-/*  COLORS */
+  /*  //COLORS */
   --overlay-color: rgb(0 0 0 / 60%);
-  --red-light:red;
-  --red-dark:rgb(143, 4, 4);
+  --red-light: red;
+  --red-dark: rgb(143, 4, 4);
 }
