add vite and fix some styles

--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,5 +1,5 @@
 /* stylelint-disable declaration-block-no-redundant-longhand-properties */
-.Modal {
+.modal {
   position: fixed;
   top: 0;
   bottom: 0;
