--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,5 +1,5 @@
-.Sidebar {
-  height: calc(100vh - var(--navbar-height));
+.sidebar {
+  height:calc(100vh - var(--navbar-height));
   width: var(--sidebar-width);
   background: var(--inverted-bg-color);
   position: relative;
