add article rating

--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,4 +1,4 @@
-.LIST {
+.list {
   .card {
     margin-bottom: 30px;
 
@@ -8,7 +8,7 @@
   }
 }
 
-.PLATE {
+.plate {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
