--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -11,7 +11,7 @@
   object-fit: contain;
 }
 
-.LIST {
+.list {
   .views {
     margin-left: auto;
   }
@@ -49,7 +49,7 @@
   }
 }
 
-.PLATE {
+.plate {
   .card {
     width: 230px;
     transition: 0.2s;
