--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,4 +1,3 @@
-
 .modal {
   position: fixed;
   top: 0;
@@ -14,12 +13,11 @@
   align-items: center;
 }
 
-
 .content {
+  z-index: var(--modal-z-index);
   padding: 20px;
   border-radius: 10px;
-  background:var(--bg-color);
-  z-index: var(--modal-z-index);
+  background: whitesmoke;
   transition: 0.3s all;
   transform: scale(0.5);
   max-width: 50%;
@@ -36,7 +34,7 @@
 }
 
 .isClosing {
-    .content {
-        transform: scale(0.2);
-    }
+  .content {
+    transform: scale(0.2);
+  }
 }
